# dados_uber

./: .gitignore  main.py  pyproject.toml  result.csv
tests/: test_uber.py
uber/pages/: pages.py
uber/registro/: registro.py
